--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,2 +1,105 @@
-<p style="margin-top: 35px;">contact works!</p>
+<div class="containerAuth">
+  <div
+    class="container d-flex flex-column justify-content-center align-items-center imgFondoAuth"
+  >
+    <p class="text-center mb-4" style="color: white">
+      Haznos llegar tu consulta a través del siguiente formulario
+    </p>
+    <div class="card p-4" style="max-width: 600px; width: 100%">
+      <form
+        [formGroup]="contactForm"
+        (ngSubmit)="onSubmit()"
+        class="mx-0 my-auto"
+      >
+        <div class="mb-3">
+          <p-floatLabel>
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+              formControlName="user"
+            />
+            <label for="user">Nombre</label>
+          </p-floatLabel>
+          @if(contactForm.get('user')?.invalid &&
+          contactForm.get('user')?.touched){
+          <div class="text-danger text-center">
+            @if(contactForm.get('user')?.hasError('required')){
+            <small>El nombre es requerido.</small>
+            }
+          </div>
+          }
+        </div>
+        <div class="mb-3">
+          <p-floatLabel>
+            <input
+              type="email"
+              id="email"
+              class="form-control"
+              formControlName="email"
+            />
+            <label for="email">Email</label>
+          </p-floatLabel>
+          @if(contactForm.get('email')?.invalid &&
+          contactForm.get('email')?.touched){
+          <div class="text-danger text-center">
+            @if(contactForm.get('email')?.hasError('required')){
+            <small>Email es requerido.</small>
+            } @if(contactForm.get('email')?.hasError('email')){
+            <small>Email no es válido.</small>
+            }
+          </div>
+          }
+        </div>
+        <div class="mb-3">
+          <p-floatLabel>
+            <input
+              type="text"
+              id="subject"
+              class="form-control"
+              formControlName="subject"
+            />
+            <label for="password">Asunto</label>
+          </p-floatLabel>
+          @if(contactForm.get('subject')?.invalid &&
+          contactForm.get('subject')?.touched){
+          <div class="text-danger text-center">
+            @if(contactForm.get('subject')?.hasError('required')){
+            <small>El campo es requerido.</small>
+            }
+          </div>
+          }
+        </div>
+        <div class="mb-3">
+          <p-floatLabel>
+            <textarea   class="form-control" id="float-input" rows="5" cols="30" pInputTextarea   formControlName="message">
+            </textarea>
+            <label for="float-input">Déjanos tu comentario</label>
+          </p-floatLabel>
+          @if(contactForm.get('message')?.invalid &&
+          contactForm.get('message')?.touched){
+          <div class="text-danger text-center">
+            @if(contactForm.get('message')?.hasError('required')){
+            <small>El campo es requerido.</small>
+            }
+          </div>
+          }
+          <div class="mb-3 check">
+            <p-checkbox formControlName="policy" value="true" inputId="ny" />
+            <label for="ny" style="margin-left: 5px"
+              ><small>Acepto la política de privacidad</small></label
+            >
+          </div>
+        </div>
 
+        <button
+          type="submit"
+          class="btn btn-primary w-100"
+          [disabled]="contactForm.invalid"
+        >
+          Enviar
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
