--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@
           (ngSubmit)="onSubmit()"
           class="mx-0 my-auto"
         >
-          <div class="mb-3">
+          <div class="mb-3 input">
             <p-floatLabel>
               <input
               type="email"
@@ -33,7 +33,7 @@
               </div>
             }         
           </div>
-          <div class="mb-3">
+          <div class="mb-3 input">
             <p-floatLabel>
               <input
               type="password"
@@ -57,8 +57,7 @@
             </div>
                 }
             
-          </div>
-  
+          </div>  
           <button
             type="submit"
             class="btn btn-primary w-100 button"
