--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -9,7 +9,7 @@
         (ngSubmit)="onSubmit()"
         class="mx-0 my-auto"
       >
-        <div class="mb-3">
+        <div class="mb-3 input">
           <p-floatLabel>
             <input
             type="password"
@@ -32,7 +32,7 @@
               }
           
         </div>
-        <div class="mb-3">
+        <div class="mb-3 input">
           <p-floatLabel>
             <input
             type="password"
@@ -56,7 +56,6 @@
               }
           
         </div>
-
         <button
           type="submit"
           class="btn btn-primary w-100"
