--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -13,7 +13,7 @@
         (ngSubmit)="onSubmit()"
         class="mx-0 my-auto"
       >
-        <div class="mb-3">
+        <div class="mb-3 input">
           <p-floatLabel>
             <input
             type="text"
@@ -32,7 +32,7 @@
           </div>
           }
         </div>
-        <div class="mb-3">
+        <div class="mb-3 input">
           <p-floatLabel>
             <input
             type="email"
@@ -53,7 +53,7 @@
           </div>
           }
         </div>
-        <div class="mb-3">
+        <div class="mb-3 input">
           <p-floatLabel>
             <input
             type="password"
@@ -74,7 +74,7 @@
           </div>
           }
         </div>
-        <div class="mb-3">
+        <div class="mb-3 input">
           <p-floatLabel>
             <input
             type="password"
