--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -10,7 +10,7 @@
       <div class="card p-2" style="max-width: 600px; width: 100%; height: 20%">
         <form [formGroup]="resetPassword" (ngSubmit)="onSubmit()"  class="mx-0 my-auto">
           <!-- Campo Email -->
-          <div  class="mb-3">
+          <div  class="mb-3 input">
             <p-floatLabel>
               <input
               type="email"
