--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top" style="background-color: black">
+<nav class="navbar fixed-top" style="background-color: transparent">
   <div class="container-fluid">
     <a class="navbar-brand" href="#" style="color: white"><img
       src="/images/logo.JPG"
