--- a/src/app/pages/partys/partys.component.css
+++ b/src/app/pages/partys/partys.component.css
@@ -1,5 +1,5 @@
 .sticky-header {
-  position: sticky;
+  /* position: sticky; */
   top: 0; /* Fijo 0px desde la parte superior */
   padding: 20px;
   z-index: 1000; /* Asegura que el encabezado esté por encima del contenido */
