texto partys ok

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -8,7 +8,7 @@
             >
       <!-- Section: Social media -->
       <section
-    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+    class="d-flex justify-content-center justify-content-lg-between border-bottom"
   >
     <!-- Left -->
     <!-- <div class="me-5 d-none d-lg-block" style="margin-bottom: 8px;">
