--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -2,7 +2,10 @@
 @if(loading){
   <app-loading></app-loading>
 } @else {
-  <h1  class="sticky-header">Fiestas {{obtenerMesActual()}}</h1>
+  <div class="sticky-header">
+    <h1 [ngClass]="{'scrolled': isScrolled}" style="text-align: center;">Fiestas {{ obtenerMesActual() }}</h1>
+  </div>
+  
   <p style="text-align: center;">No te pierdas las fiestas más locas de la noche madrileña. El mejor ambiente swinger de Madrid.</p>
   <div class="card-container">
         @for(item of partys; track item){
