--- a/src/app/pages/partys/partys.component.html
+++ b/src/app/pages/partys/partys.component.html
@@ -3,7 +3,7 @@
   <app-loading></app-loading>
 } @else {
   <div class="sticky-header">
-    <h1 [ngClass]="{'scrolled': isScrolled}" style="text-align: center;">Fiestas {{ obtenerMesActual() }}</h1>
+    <h1 [ngClass]="{'scrolled': isScrolled}" style="text-align: center;">Fiestas</h1>
   </div>
   
   <p style="text-align: center;">No te pierdas las fiestas más locas de la noche madrileña. El mejor ambiente swinger de Madrid.</p>
