--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 /* Estilos para los botones */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 
 
 
