--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -105,7 +105,7 @@ swiper-slide img {
   width: 60%;
   padding: 35px;
 }
-.img-gallery{
+.imagesPartys{
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -121,6 +121,9 @@ swiper-slide img {
   font-family: "Bebas Neue", sans-serif;
 }
 /*section PArtys*/
+.image-container{
+  height: 300px;
+}
 .section-partys{
   width: 100%;
   height: 100vh; 
@@ -141,6 +144,82 @@ swiper-slide img {
   display: none;
   overflow: hidden;
 }
+
+
+
+/* GALERÍA DE PRIMENG */
+/* Contenedor principal */
+.gallery-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 16px;
+  padding: 20px;
+  background-color: #111;
+  color: #fff;
+}
+
+/* Estilo de cada card de imagen */
+.gallery-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  background-color: var(--first-purple);
+  margin: 0px 3px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery-item:hover {
+  transform: scale(1.05);
+}
+
+/* Imagen */
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.3s ease;
+}
+
+/* Overlay con detalles */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 1.2em;
+}
+
+.gallery-item:hover .overlay {
+  opacity: 1;
+}
+
+/* Texto del overlay */
+.overlay-text {
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.7);
+}
+.item-footer,.item-title{
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+  color: var(--details);
+  text-align: center;
+  font-size: 1.1em;
+}
+
+
 @media (min-width: 1200px) {
   .hero-content h1 {
     margin-bottom: 3rem;
@@ -189,6 +268,9 @@ display: none;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.section-partys{
+  height: auto; 
 }
 }
 
