--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,6 +9,8 @@
   display: flex;
   padding-top: 100px;
   flex-direction: column;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   /* margin-top: 100px; */
 }
 
