--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,14 +1,24 @@
+/* .scroll-container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory; 
+}
+.scroll-item {
+  height: 100vh;
+  scroll-snap-align: start;
+  overflow-y: hidden;
+} */
 /* Hero Section */
 .hero-section {
-    position: relative; /* Para que el pseudo-elemento ::before funcione correctamente */
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     width: 100%;
+    height: 100vh;
     color: white;
     text-align: center;
-    overflow: hidden; /* Asegura que nada se desborde */
+    overflow-x: hidden;
 }
 
 .hero-section::before {
@@ -21,8 +31,8 @@
     background-image: url(/images/neon.jpg);
     background-position: center;
     background-size: cover;
-    opacity: 0.2; /* La opacidad solo se aplica al fondo */
-    z-index: 0; /* Asegúrate de que el fondo esté detrás del contenido */
+    opacity: 0.2;
+    z-index: 0; 
 }
   .hero-content{
     color: white;
@@ -38,118 +48,34 @@
     margin-bottom: 3rem;
     font-size: 23rem;
 }
-  .btn-primary {
-    background-color: var(--second-purple);
-    border-color: var(--second-purple);
-    transition: .4s ease-out;
-    width: 100%;
+  .title-partys, .title-gallery{
     text-align: center;
-    font-size: medium;
-    padding: 15px 30px; 
-    font-size: 1rem; 
-    /* /background-color: #ff4081;  */
-    border: none; 
-    color: #fff; 
-    cursor: pointer;
+    color: var(--details);
+    font-family: "Bebas Neue", sans-serif;
   }
-  .btn-primary > a{
-    color: white;
-    text-decoration: none;
-  }
-  .btn-primary:hover {
-    background-color: var(--third-purple);
-    border-color: var(--third-purple);
-  }
-  /* Servicios Section */
-  .services-section {
-    padding: 3em 0;
-    text-align: center;
-    background-color: var(--first-purple);
-  }
-  .p-card-body {
-    background-color: var(--third-purple) !important;
-  }
-  
-  .services-section h2 {
-    margin-bottom: 1.5em;
-    font-size: 2.5em;
-  }
-  
-  /* Testimonios Section */
-  .testimonials-section {
-    padding: 3em 0;
-    background-color: #240048;
-    text-align: center;
-    color:white;
-  }
-swiper-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+/* Section Gallery*/
+.image-gallery{
+  height: 90vh;
+  object-fit: cover;
+}
+/*section PArtys*/
+.image-container{
+  height: 600px;
+}
+.section-partys{
+  width: 100%;
 }
 
-swiper-slide img {
-  height: 100%; 
-  width: 100%; 
-  object-fit: cover; 
-}
-/* Section Gallery*/
-.section-gallery{
-  overflow-x: hidden;
-  display: flex;
-  color: white;
-}
-.slider-containerDesktop{
-  height: 80vh; 
-  width: 60%;
-  padding: 35px;
-}
+
 .imagesPartys{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.text-gallery{
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  color: var(--details);
-  font-family: "Bebas Neue", sans-serif;
-}
-/*section PArtys*/
-.image-container{
-  height: 300px;
-}
-.section-partys{
-  width: 100%;
-  height: 100vh; 
-  overflow-x: hidden;
-}
-.title-partys{
-  text-align: center;
-  color: var(--details);
-  font-family: "Bebas Neue", sans-serif;
-}
-.slider-container-partys{
-  height: 80vh; 
-  width: 100%;
-  padding: 10px;
-  overflow: hidden;
-}
-.slider-container-partys-mobile{
-  display: none;
-  overflow: hidden;
-}
-
-
 
 /* GALERÍA DE PRIMENG */
 /* Contenedor principal */
-.gallery-container {
+.parties-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 16px;
@@ -159,7 +85,7 @@ swiper-slide img {
 }
 
 /* Estilo de cada card de imagen */
-.gallery-item {
+.parties-item {
   position: relative;
   overflow: hidden;
   border-radius: 8px;
@@ -169,14 +95,14 @@ swiper-slide img {
   transition: transform 0.3s ease-in-out;
 }
 
-.gallery-item:hover {
+.parties-item:hover {
   transform: scale(1.05);
 }
 
 /* Imagen */
-.gallery-item img {
+.parties-item img {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   object-fit: cover;
   transition: opacity 0.3s ease;
 }
@@ -218,8 +144,6 @@ swiper-slide img {
   text-align: center;
   font-size: 1.1em;
 }
-
-
 @media (min-width: 1200px) {
   .hero-content h1 {
     margin-bottom: 3rem;
@@ -245,26 +169,7 @@ swiper-slide img {
     margin-bottom: 3rem;
     font-size: 6rem;
 }
-.slider-container-partys{
-display: none;
-}
-.slider-container-partys-mobile{
-  display: block;
-  height: 40vh; 
-  width: 100%;
-  padding: 10px;
-  overflow: hidden;
-}
-.section-gallery{
-  display: flex;
-  flex-direction: column;
-}
-.slider-containerDesktop{
-  height: 30vh; 
-  width: 100%;
-  padding: 10px;
-}
-.img-gallery{
+.imagesPartys{
   width: 100%;
   height: 100%;
   object-fit: cover;
