--- a/src/app/pages/tarifas/tarifas.component.css
+++ b/src/app/pages/tarifas/tarifas.component.css
@@ -126,3 +126,209 @@ align-items: center;
 
     }
   }
+/* Prueba cards codepenio*/
+
+.container-cards{
+    display: grid;
+    @media (min-width: 800px) {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    @media (max-width: 800px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: 546px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+}
+.page-content {
+    display: grid;
+    grid-gap: 1rem;
+    padding: 1rem;
+    max-width: 1024px;
+    margin: 0 auto;
+    font-family: var(--font-sans);
+    
+    @media (min-width: 600px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    
+    @media (min-width: 800px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+}
+.title-tarifas{
+    color: var(--details);
+    text-align: center;
+}
+
+
+.card {  
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  overflow: hidden;
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  color: var(--details);
+  background-size: cover;
+  border: none;
+  /* background-color: var(--second-purple);
+    box-shadow: 0 1px 1px var(--second-purple), 
+    0 2px 2px var(--second-purple), 
+    0 4px 4px var(--second-purple), 
+    0 8px 8px var(--second-purple),
+    0 16px 16px var(--second-purple); */
+    @media (min-width: 600px) {
+        height: 70vh;
+      }
+
+    @media (max-width: 600px) {
+        height: 350px;
+      }
+  
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 110%;
+    background-size: cover;
+    background-position: 0 0;
+    transition: transform calc(700ms * 1.5) cubic-bezier(0.19, 1, 0.22, 1);
+    pointer-events: none;
+  }
+  
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200%;
+    pointer-events: none;
+    background-image: linear-gradient(
+      to bottom,
+      hsla(0, 0%, 0%, 0) 0%,
+      hsla(0, 0%, 0%, 0.009) 11.7%,
+      hsla(0, 0%, 0%, 0.034) 22.1%,
+      hsla(0, 0%, 0%, 0.072) 31.2%,
+      hsla(0, 0%, 0%, 0.123) 39.4%,
+      hsla(0, 0%, 0%, 0.182) 46.6%,
+      hsla(0, 0%, 0%, 0.249) 53.1%,
+      hsla(0, 0%, 0%, 0.320) 58.9%,
+      hsla(0, 0%, 0%, 0.394) 64.3%,
+      hsla(0, 0%, 0%, 0.468) 69.3%,
+      hsla(0, 0%, 0%, 0.540) 74.1%,
+      hsla(0, 0%, 0%, 0.607) 78.8%,
+      hsla(0, 0%, 0%, 0.668) 83.6%,
+      hsla(0, 0%, 0%, 0.721) 88.7%,
+      hsla(0, 0%, 0%, 0.762) 94.1%,
+      hsla(0, 0%, 0%, 0.790) 100%
+    );
+    transform: translateY(-50%);
+    transition: transform calc(700ms * 2) cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+}
+
+.content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+  transition: transform 700ms cubic-bezier(0.19, 1, 0.22, 1);
+  z-index: 1;
+  
+  > * + * {
+    margin-top: 1rem;
+  }
+}
+
+.title {
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 1.2;
+  width: 100%;
+  @media (max-width: 546px) {
+    font-size: 2rem;
+    font-style: italic;
+  }
+}
+
+.copy {
+  font-family: var(--font-serif);
+  font-size: 1.125rem;
+  font-style: italic;
+  line-height: 1;
+  @media (max-width: 546px) {
+    font-size: 0.8rem;
+    font-style: italic;
+  }
+}
+
+@media (hover: hover) and (min-width: 546px) {
+  .card:after {
+    transform: translateY(0);
+  }
+  
+  .content {
+    /* transform: translateY(calc(100% - 4.5rem)); */
+    
+    > *:not(.title) {
+      opacity: 0;
+      transform: translateY(1rem);
+      transition:
+        transform 700ms cubic-bezier(0.19, 1, 0.22, 1),
+        opacity 700ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+  }
+  
+  .card:hover,
+  .card:focus-within {
+    align-items: center;
+
+    &:before { transform: translateY(-4%); }
+    &:after { transform: translateY(-50%); }
+
+    .content {
+      transform: translateY(0);
+
+      > *:not(.title) {
+        opacity: 1;
+        transform: translateY(0);
+        transition-delay: calc(700ms / 8);
+      }
+    }
+  }
+  
+  .card:focus-within {
+    &:before,
+    &:after,
+    .content,
+    .content > *:not(.title) {
+      transition-duration: 0s;
+    }
+  }
+}
+@media (focus: focus) and (max-width: 546px) {
+  .card:after {
+    transform: translateY(0);
+  }
+  .content {
+    /* transform: translateY(calc(100% - 4.5rem)); */
+    
+    > *:not(.title) {
+      opacity: 0;
+      transform: translateY(1rem);
+      transition:
+        transform 700ms cubic-bezier(0.19, 1, 0.22, 1),
+        opacity 700ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+  }
+}
+  
