--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="scroll-container">
+
   <section class="hero-section scroll-item">
     <div class="hero-content">
-      <p class=""hero-content_p>Explora lo Prohibido</p>
-      <h1 class=""hero-content_h1><span class="hero-content_span">Alma's w </span>Club</h1>
+      <!-- <p class="hero-content_p">Explora lo Prohibido</p> -->
+      <h1 class="hero-content_h1"><span class="hero-content_span">Alma's w </span>Club</h1>
     </div>
   </section>
 
@@ -20,7 +20,14 @@
           </ng-template>
   </p-galleria>
   </section> 
-
+  <section class="d-flex flex-column flex-lg-row md:flex-wrap align-items-center section-text" data-aos="flip-up">
+    <div class="col-12 col-lg-6">
+      <img src="https://res.cloudinary.com/de3ujeyub/image/upload/v1731257753/favicon_io8jjn.jpg" alt="logo">
+    </div>
+    <div class="col-12 col-lg-6 d-flex">
+      <p class="text-white textCompany">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eius suscipit labore. Impedit nihil tenetur quia quis maxime, totam quidem numquam laudantium inventore deserunt rem architecto a aperiam aliquam? Ea.</p>
+    </div>
+  </section>
   <section data-aos="fade-left" class="partys scroll-item">
     <h1 class="title-partys">Nuestras fiestas</h1>
     <p-carousel 
@@ -53,4 +60,3 @@
         </ng-template>
   </p-carousel>
   </section>
-</div>
