--- a/src/app/pages/galery/galery.component.html
+++ b/src/app/pages/galery/galery.component.html
@@ -1,4 +1,4 @@
-<!-- <div >
+<div >
     <h2 class="letras" style="color: white">Pruebas de letras</h2>
     <p class="primera">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
     </p>
@@ -14,7 +14,7 @@
     <hr style="color: white;"/>
     <p class="quinta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel augue eget nisl bibendum fringilla. Ut venenatis sapien id lectus vulputate, ac tincidunt nulla accumsan. Curabitur nec arcu at justo tristique sodales. Quisque laoreet consequat nisi, ac ultricies elit gravida sit amet. Integer malesuada eu nisi nec varius. Sed sed urna non magna dignissim fermentum.
     </p>
-  </div> -->
+  </div>
   <section>
     <h1 class="gallery-title">Galeria de imágenes</h1>
     <div class="columns">
